# django_flutter_college

./: .env-sample  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Insomnia_api_collection.json  Insomnia_api_college.json  README.md  commands.txt  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  sprint.text
.github/: dependabot.yml
To_do_list/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
To_do_list/migrations/: 0001_initial.py  0002_auto_20210322_0348.py
backend_django/: settings.py  urls.py
client/: pubspec.yaml
client/lib/: main.dart
client/lib/api/: api_dev.dart  api_form.dart
client/lib/model/: model_cadastro.dart
client/lib/screens/: home.dart  homepage.dart
client_flutter/: README.md  pubspec.yaml
client_flutter/android/app/: build.gradle
client_flutter/ios/Runner.xcodeproj/: project.pbxproj
client_flutter/lib/: main.dart
client_flutter/lib/app/: app.dart
client_flutter/lib/data/: data.dart
client_flutter/lib/domain/: domain.dart
client_flutter/test/: widget_test.dart
core/: admin.py  models.py  serializer.py  urls.py  views.py
core/exceptions/: exceptions.py
core/migrations/: 0001_initial.py  0002_auto_20211126_0614.py  0002_discipline_semester_grade.py  0003_auto_20211126_0624.py  0003_remove_semester_qtd_semester_semester.py  0004_discipline_createat_discipline_updateat_and_more.py  0004_remove_cadastro_school_cadastro_dev.py  0005_remove_semester_score_grade_score.py  0006_rename_grade_scores.py  0007_discipline_student_semester_discipline_semester_year.py  0008_remove_discipline_student_discipline_student.py  0009_remove_student_cpf_remove_teacher_description.py  0010_alter_scores_options.py  0011_remove_semester_discipline_remove_semester_year_and_more.py  0012_discipline_semester.py  0013_remove_scores_semester.py  0014_alter_scores_options_alter_discipline_student.py  0015_alter_discipline_student.py  0016_teacher_name.py  0017_rename_aluno_scores_student.py
core/v1/: serializers.py  urls.py  views.py
core/v1/mocks/: api_routes_mock.py  data_mock.py  payload_mock.py
core/v1/models/: auth_models.py  college_models.py  school_models.py
core/v1/permissions/: permissions.py
core/v1/serializers/: serializers_auth.py  serializers_college.py  serializers_school.py
core/v1/urls/: urls_v1.py
core/v1/views/: auth_views.py  college_views.py  school_views.py
django_forms/: admin.py  models.py  serializers.py  urls.py  views.py
django_forms/migrations/: 0001_initial.py  0002_fastcadastro.py  0003_fastcadastro_iscompleted.py  0004_fastcadastro_image.py
frontend_flutter/: .gitignore  pubspec.yaml
frontend_flutter/android/app/: build.gradle
frontend_flutter/lib/: home.dart  main.dart
server/: settings.py  urls.py  wsgi.py
server/config/: base.py  developer.py  production.py
server/settings/: base.py  local.py  production.py
(+123 files in other folders)
