[tool.poetry]
name = "django-flutter-school"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_flutter_school"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
djangorestframework-simplejwt = "^5.2.2"
coverage = "^7.2.7"
drf-yasg = "^1.21.5"
psycopg = "^3.1.9"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
